scalaplugin/src/test/resource/acyclic/src/test/resources/success/simple/B.scala
package success.simple

class B {
  val a: A = null
}
