scalaplugin/src/test/resource/acyclic/src/test/resources/fail/simple/B.scala
package fail.simple

class B {
  val a1: A = new A
  val a2: A = new A
}
